--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@devexpress/dx-react-core": "^2.7.4",
     "@devexpress/dx-react-scheduler": "^2.7.4",
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.4",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/react": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
